<?xml version="1.0"?>
<package format="2">
  <name>shelfmatch_task</name>
  <version>0.1.0</version>
  <description>The shelfmatch_task package</description>

  <maintainer email="a.khssnv@gmail.com">Alisher A. Khassanov</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>aws_robomaker_bookstore_world</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>turtlebot3</exec_depend>

  <export>
  </export>
</package>
